[package]
name = "brewver"
version = "0.1.0"
edition = "2021"
authors = ["Agnislav Onufriichuk"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = "4.5.20"
clap_derive = "4.5.13"
tempfile = "3.1.0"
futures = "0.3.30"
log = "0.4"
env_logger = "0.9"
